# mapped

./: Cargo.toml  README.md
src/: basecolors  generated_data  lib.rs  mappers.rs  memoize.rs  palette.rs  pallete.rs  procutils.rs
tests/: basic.rs
