[package]
name = "mapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
fastrand = "1.8.0"
image = "0.24.3"
indicatif = "0.17.0"
num_cpus = "1.13.1"
rayon =  "1.7.0"

[profile.release]
strip = true
